--- a/iw.css
+++ b/iw.css
@@ -96,7 +96,7 @@ body
     font-weight: 200;
     margin: 0.4em 0;
   }
-  #isfor { font-size: 50px;
+  #isfor { font-size: 3vw;
 color: white; }
 
 .maintxt
@@ -206,7 +206,7 @@ color: white; }
 }
 #ideatxt
 {
-  font-size: 60px;
+  font-size: 4vw;
   text-align: center;
   color: #ffffff;
   font-weight: 700;
@@ -238,14 +238,14 @@ color: white; }
 #ideatxt1
 {
   /* font-size: 1.5rem; */
-  font-size: 26px;
+  font-size: 20px;
   color: #ffffff;
-  word-spacing: 10px;
+  /* word-spacing: 10px; */
   font-family: sans-serif;
   border-style: solid;
   border-color: #ffffff;
   border-width: 1px;
-  padding: 40px;
+  padding: 30px;
   border-radius: 40px;
   border-radius: 54px;
 background: #111111;
@@ -375,7 +375,7 @@ text-align: center;
   margin-right: 1.5rem;
   /* flex: 2; */
   transition: 0.3s;
-  width: 100%;
+  width: 70%;
   border-style: solid;
   border-color: black;
   display: block;
@@ -387,8 +387,8 @@ text-align: center;
 }
 #upcomtxt
 {
-  margin-top: 100px;
-  font-size: 3rem;
+  margin-top: 60px;
+  font-size: 1.5rem;
   color: #070707;
   background-color: #ffffff;
   /* color: white; */
@@ -407,9 +407,9 @@ text-align: center;
 #glimpse
 {
   text-align: center;
-  font-size: 60px;
+  font-size: 2.5rem;
   color: white;
-  font-family: cursive;
+  /* font-family: cursive; */
 }
 #momimg
 {
@@ -422,14 +422,412 @@ text-align: center;
   margin-left: auto;
   margin-right: auto;
   border-radius: 50px;
-  border-color: #999999;
+  border-color: #222222;
   border-width: 20px;
-  border-bottom-width: 40px;
+  /* border-bottom-width: 40px;
   border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0px;
+  border-bottom-left-radius: 0px; */
   border-style: solid;
+  position: relative;
 }
 .domtxt
 {
   font-size: 50px;
+}
+
+.gdimg
+{
+  width: 80%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+#drow
+{
+  padding: 30px;
+}
+.s
+{
+  background: #111111;
+box-shadow:  5px 5px 10px #070707,
+             -5px -5px 10px #1b1b1b;
+}
+#night
+{
+  background-color: white;
+  border-radius: 100%;
+  margin: 20px;
+  padding: 10px;
+  height: 50px;
+  width: 50px;
+}
+.gdimg1
+{
+  width: 90%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.button {
+  background-color:#109fdd;
+  border-radius: 20px;
+  border: none;
+  color: white;
+  padding: 5px 22px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+#gdhd
+{
+  color: white;
+  font-size: 35px;
+  text-align: center;
+  margin-top: 50px;
+}
+#gdtxt
+{
+  margin-top: 30px;
+  font-size: 20px;
+  color: white;
+  padding: 10px; 
+}
+#frow
+{
+  background-color: #070707;
+  border-radius: 200px;
+  margin-top: 20px;
+}
+.human
+{
+  position: absolute;
+  transform: translate(-50%,-50%);
+  left: 7%;
+  top: 20%;
+}
+.domain
+{
+  position: relative;
+}
+.human2
+{
+  position: absolute;
+  transform: translate(-50%,-50%);
+  left: 92%;
+  top: 73.5%;
+  overflow: hidden;
+}
+@media screen and (max-width:1300px)
+{
+  .human2
+  {
+    display: none;
+  }
+}
+@media screen and (max-width:800px)
+{
+  .card9
+  {
+    width: 100%;
+    margin-left: 0px;
+    margin-right: 0px;
+  }  
+}
+@media screen and (max-width:500px)
+{
+  #upcomtxt
+{
+  margin-top: 0px;
+  /* font-size: 1.5rem; */
+  color: #070707;
+  background-color: #ffffff;
+  /* color: white; */
+  font-weight: 700;
+  padding: 0;
+  /* top: 50%;
+  left: 50%; */
+  text-align: center;
+  /* position: absolute;
+  transform: translate(-50%,-50%); */
+}
+}
+.upimg
+{
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+.events
+{
+  padding: 10px;
+}
+.whand
+{
+  width: 33%;
+  margin-top: -26px;
+}
+@media screen and (max-width:800px)
+{
+  .tv
+{
+  display: none;
+}
+  .whand
+  {
+    margin-top: -20px;
+  }
+  .card9 {
+    margin-left: 0rem;
+    margin-right: 0rem;
+    /* flex: 2; */
+    transition: 0.3s;
+    width: 100%;
+    border-style: solid;
+    border-color: black;
+    border-radius: 20px;
+    border-width: 10px;
+  }
+  #gdtxt
+{
+  margin-top: 0px;
+  font-size: 15px;
+  color: white;
+  padding: 1px; 
+}
+#gdhd
+{
+  font-size: 20px;
+  margin-top: 15px;
+}
+.human
+{
+  display: none;
+}
+}
+.tv
+{
+  position: absolute;
+  transform: translate(-50%,-50%);
+  left: 85%;
+  top: 12%;
+  width: 30%;
+}
+@media screen and (max-width:500px)
+{
+  .card9 {
+    /* flex: 2; */
+    transition: 0.3s;
+    width: 250px;
+    border-style: solid;
+    border-color: black;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+    border-radius: 20px;
+    border-width: 10px;
+  }
+}
+
+section
+{
+  position: relative;
+  width: 100%;
+  height: 90vh;
+  background-color: #222222;
+  overflow: hidden;
+}
+section .wave
+{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: url('wave.png');
+  background-size: 1000px 100px;
+}
+section .wave.wave1
+{
+  animation: animate 30s linear infinite;
+  z-index: 1000;
+  opacity: 1;
+  animation-delay: 0s;
+  bottom: 0;
+}
+section .wave.wave2
+{
+  animation: animate2 15s linear infinite;
+  z-index: 999;
+  opacity: 0.5;
+  animation-delay: -5s;
+  bottom: 10px;
+}
+section .wave.wave3
+{
+  animation: animate 30s linear infinite;
+  z-index: 998;
+  opacity: 0.2;
+  animation-delay: -2s;
+  bottom: 15;
+}
+section .wave.wave4
+{
+  animation: animate2 5s linear infinite;
+  z-index: 997;
+  opacity: 0.7;
+  animation-delay: -5s;
+  bottom: 20px;
+} 
+@keyframes animate
+{
+  0%
+  {
+    background-position-x: 0;
+  }
+  100%
+  {
+    background-position-x: 1000px;
+  }
+}
+@keyframes animate2
+{
+  0%
+  {
+    background-position-x: 0;
+  }
+  100%
+  {
+    background-position-x: -1000px;
+  }
+}
+
+.wanna
+{
+  margin-top: 40px;
+  font-size: 40px;
+  color: white;
+  text-align: center;
+  letter-spacing: 5px;
+}
+.button1 {
+  background-color:#109fdd;
+  /* border-radius: 20px; */
+  border: none;
+  color: white;
+  padding: 5px 22px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 30px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+.join
+{
+  text-align: center;
+  color: white;
+  font-size: 25px;
+  background-color: #109fdd;
+  padding: 12px 15px;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  left: 50%;
+  top: 25%;
+}
+a:link
+{
+  text-decoration: none;
+}
+a:hover
+{
+  color: darkgray;
+}
+a:visited
+{
+  color: white;
+}
+a:active
+{
+  color: darkgray;
+}
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #999999; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #109fdd; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+.final
+{
+  color: white;
+  font-size: 20px;
+  font-weight: 500;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  bottom: 8%;
+  left: 50%;
+}
+.follimg
+{
+  width: 250px;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+#cont
+{
+  margin-top: 150px;
+}
+.team
+{
+  color: white;
+  font-size: 25px;
+  /* transform: rotate(270deg); */
+}
+.ourt
+{
+  /* transform: rotate(270deg); */
+  background-color: white;
+  color: black;
+  font-weight: 500;
+}
+.us
+{
+  font-size: 25px;
+  text-align: center;
+  color: white;
+}
+.icon
+{
+  width: 30px;
+  height: auto;
+  text-align: center;
+  margin: 5px;
+  border-radius: 4px;
+}
+.icons
+{
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
 }
